kubernete/insta_pod_with_volume/pods-with-volume/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod3
  labels: 
    type: tondu
spec:
  containers:
    - name: insta
      image: siddharthdoccker/insta-img:v1
      ports:
        - containerPort: 80
      volumeMounts:
      - name: my-volume
        mountPath: /usr/share/nginx/html
  volumes:
     - name: my-volume
       #emptyDir: {}
       persistentVolumeClaim:
          claimName: my-pvc2
