kubernete/insta_pod_with_volume/pods-with-volume/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
spec: 
  podSelector:
    matchLabels:
      type: tondu
  ingress:
  - ports: 
    - port: 80
